# fake-onvif-cam

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cameras-8.toml  ffplay.bat  run-8.bat  run.bat
src/: config.rs  discovery.rs  ffmpeg.rs  http.rs  main.rs  onvif.rs  rtsp.rs  util.rs
