[package]
name = "fake-onvif-cam"
version = "0.1.0"
edition = "2021"
description = "A small cross-platform fake ONVIF camera for testing NVR discovery and RTSP ingestion."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
ctrlc = "3.5"

[build-dependencies]
git-version = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"